Fixes navigation alignment issue, ticket DT-702

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -1,3 +1,4 @@
+@import "@{templateCommon}/basekit-bootstrap.less";
 
 /* ===============================
    TEMPLATE CSS
@@ -366,7 +367,7 @@ footer p {
 
 .widget.extendednavigation {
   position: relative;
-  max-width: 960px;
+  width: 100%;
   margin:0px auto;
   display:table;
 }
